--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -5,6 +5,7 @@
     justify-content: center;
     align-items: center;
     gap: 2rem;
+    text-align: center;
 }
 
 .header {
@@ -23,4 +24,23 @@
     color: #fff;
     font-size: 1.5rem;
     letter-spacing: 0.1rem;
+}
+
+@media (max-width: 375px) {
+    .main {
+        padding: 1rem;
+        gap: 1rem;
+    }
+
+    .header {
+        font-size: 2rem;
+    }
+
+    .description {
+        font-size: 1.5rem;
+    }
+
+    .help {
+        font-size: 1.2rem;
+    }
 }
