--- a/src/components/ClassSelection/ClassSelection.module.css
+++ b/src/components/ClassSelection/ClassSelection.module.css
@@ -3,6 +3,24 @@
     display: flex;
     flex-wrap: wrap;
     gap: 1rem;
-    max-width: calc(45vw - calc(2 * var(--size)));
+    max-width: calc(75vw - calc(2 * var(--size)));
     justify-content: center;
+}
+
+@media (max-width: 430px) {
+    .grid {
+        --size: 1rem;
+        gap: 0.5rem;
+        max-width: calc(100vw - calc(2 * var(--size)));
+
+    }
+}
+
+@media (max-width:1024px) {
+    .grid {
+        --size: 2rem;
+        gap: 1rem;
+        max-width: calc(100vw - calc(2 * var(--size)));
+
+    }
 }
