--- a/src/components/Picker/Picker.module.css
+++ b/src/components/Picker/Picker.module.css
@@ -33,3 +33,9 @@
     transform: scale(0.98);
     box-shadow: 3px 2px 22px 1px rgba(0, 0, 0, 0.24);
 }
+
+@media (max-width: 375px) {
+    .Picker {
+        gap: 2rem;
+    }
+}
